feat(policy): Add legacy keys.
